--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,7 +12,27 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
 }
+
+.firsthead {
+  display: flex;
+}
+
+
+.secondhead {
+  display: flex;  
+  
+}
+
+.links {
+  display: flex;
+  gap: 16px;
+}
+
 
 .profile-image {
   background: rebeccapurple;
@@ -20,6 +40,7 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  margin-right: 8px;
 }
 
 .logo {
@@ -27,6 +48,9 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  padding-left: 8px;
+
+
 }
 
 button {
@@ -35,12 +59,15 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  margin: 8px;
+  
 }
 
 a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
+
 }
 
 ul {
