--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,21 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding: 24px;
+  gap: 16px;
+
+}
+
+.center {
+  padding-left: 12px;
+  padding-right: 12px;
+}
+
+.header {
+  font-weight: bolder;
+  font-size: x-large;
+  padding-bottom: 12px;
 }
 
 .icon {
@@ -57,6 +72,7 @@ button.continue {
   background: royalblue;
   border: 1px solid royalblue;
   color: white;
+  margin-top: 12px;
 }
 
 button.cancel {
