--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,9 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+
 }
 
 img {
@@ -24,4 +27,42 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+.header, .footer {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header .left-links, .right-links {
+  display: flex;
+  gap: 2em;
+  padding-right: 4em;
+}
+
+.content {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.footer .left-links, .right-links {
+  display: flex;
+  gap: 2em;
+}
+
+.footer {
+  background: #eeeeee;
+  
+}
+
+
+
+
+a, li {
+  text-decoration: none;
+  color: black;
+  list-style: none;
 }
