--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -5,6 +5,12 @@
 
 .container {
   text-align: center;
+  display: grid;
+  height: 100vh;
+  grid-template-rows: repeat(20, 4.75vh);
+  grid-template-columns: repeat(10, 1fr);
+  column-gap: 4px;
+  row-gap: 4px;
 }
 
 .container div {
@@ -17,15 +23,26 @@
 
 .header {
   background-color: #393f4d;
+  grid-column: 1/11;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .menu ul,
 .menu li {
   font-size: 16px;
+  list-style: none;
+  display: flex;
+  gap: 2rem;
 }
 
 .sidebar {
   background-color: #FF7755;
+  grid-column: 1/3;
+  grid-row: 2/20;
+  display: grid;
+  
 }
 
 .sidebar .photo {
@@ -34,6 +51,11 @@
   font-size: 12px;
   font-weight: normal;
   border-radius: 10px;
+  margin: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
 }
 
 
@@ -42,19 +64,41 @@
   color: black;
   font-size: 16px;
   font-weight: normal;
+  margin: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
 }
 
 .nav {
   background-color: #FF7755;
+  grid-column: 3/11;
+}
+
+.nav ul {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 100%;
+  width: 100%;
 }
 
 .nav ul li {
   font-size: 16px;
   text-transform: uppercase;
+  list-style-type: none;
+  
 }
 
 .article {
   background-color: #bccbde;
+  grid-column: 3/11;
+  grid-row: 3/20;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 
 .article p {
@@ -68,6 +112,9 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 200px;
+  width: 300px;
+  margin: 8px;
 }
 
 .card p {
@@ -83,9 +130,11 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1/11; 
+  grid-row: 20/21 ;
 }
 
 .footer p {
   font-size: 13px;
-  font-weight: normal;  
+  font-weight: normal; 
 }
